postcss/testData/inspections/customSelectors/emptySelectorList.pcss
<error descr="Custom selector at-rule should contain selector list">@custom-selector :--hs;</error>
<error descr="Custom selector at-rule should contain selector list">@custom-selector :--hs ;</error>
<error descr="Custom selector at-rule should contain selector list">@custom-selector :--hs
;</error>
<error descr="Custom selector at-rule should contain selector list"><error descr="Custom selector at-rule should end with ';'">@custom-selector :--hs</error></error>